Update default CMS mappings. SOFTWARE-2691
Suggested mappings are taken from existing sites and desired CMS
configurations.

--- a/gums.config.template
+++ b/gums.config.template
@@ -483,27 +483,7 @@
 			voGroup='/cigi'/>
 
 		<vomsUserGroup
-			name='cmsfrontier'
-			access='read self'
-			description=''
-			vomsServer='cms'
-			matchFQAN='exact'
-			acceptProxyWithoutFQAN='false'
-			voGroup='/cms/uscms'
-			role='cmsfrontier'/>
-
-		<vomsUserGroup
 			name='cmsphedex'
-			access='read self'
-			description=''
-			vomsServer='cms'
-			matchFQAN='exact'
-			acceptProxyWithoutFQAN='false'
-			voGroup='/cms/uscms'
-			role='cmsphedex'/>
-
-		<vomsUserGroup
-			name='cmsphedex2'
 			access='read self'
 			description=''
 			vomsServer='cms'
@@ -511,16 +491,6 @@
 			acceptProxyWithoutFQAN='false'
 			voGroup='/cms'
 			role='cmsphedex'/>
-
-		<vomsUserGroup
-			name='cmsprod'
-			access='read self'
-			description=''
-			vomsServer='cms'
-			matchFQAN='exact'
-			acceptProxyWithoutFQAN='false'
-			voGroup='/cms/uscms'
-			role='cmsprod'/>
 
 		<vomsUserGroup
 			name='cmsproduction'
@@ -533,43 +503,54 @@
 			role='production'/>
 
 		<vomsUserGroup
-			name='cmssoft'
+			name='uscmspilot'
 			access='read self'
 			description=''
 			vomsServer='cms'
 			matchFQAN='exact'
 			acceptProxyWithoutFQAN='false'
 			voGroup='/cms/uscms'
-			role='cmssoft'/>
+			role='pilot'/>
 
 		<vomsUserGroup
-			name='cmssoft2'
+			name='cmspilot'
 			access='read self'
 			description=''
 			vomsServer='cms'
 			matchFQAN='exact'
 			acceptProxyWithoutFQAN='false'
 			voGroup='/cms'
-			role='cmssoft'/>
+			role='pilot'/>
+
+		<vomsUserGroup
+			name='cmslocal'
+			access='read self'
+			description=''
+			vomsServer='cms'
+			matchFQAN='exact'
+			acceptProxyWithoutFQAN='false'
+			voGroup='/cms/local'
+			role='pilot'/>
+
+		<vomsUserGroup
+			name='cmslcgadmin'
+			access='read self'
+			description=''
+			vomsServer='cms'
+			matchFQAN='exact'
+			acceptProxyWithoutFQAN='false'
+			voGroup='/cms'
+			role='lcgadmin'/>
 
 		<vomsUserGroup
 			name='cmsuser'
 			access='read self'
 			description=''
 			vomsServer='cms'
-			matchFQAN='exact'
+			matchFQAN='vo'
 			acceptProxyWithoutFQAN='false'
 			voGroup='/cms'
 			role='cmsuser'/>
-
-		<vomsUserGroup
-			name='cmsuser-null'
-			access='read self'
-			description=''
-			vomsServer='cms'
-			matchFQAN='vo'
-			acceptProxyWithoutFQAN='true'
-			voGroup='/cms'/>
 
 		<vomsUserGroup
 			name='des'
@@ -969,26 +950,6 @@
 			voGroup='/suragrid'/>
 
 		<vomsUserGroup
-			name='uscmst2admin'
-			access='read self'
-			description=''
-			vomsServer='cms'
-			matchFQAN='exact'
-			acceptProxyWithoutFQAN='false'
-			voGroup='/cms/uscms'
-			role='cmst2admin'/>
-
-		<vomsUserGroup
-			name='uscmsuser'
-			access='read self'
-			description=''
-			vomsServer='cms'
-			matchFQAN='exact'
-			acceptProxyWithoutFQAN='false'
-			voGroup='/cms/uscms'
-			role='cmsuser'/>
-
-		<vomsUserGroup
 			name='vo.cta.in2p3.fr'
 			access='read self'
 			description=''
@@ -1055,29 +1016,34 @@
 			accountName='cigi'/>
 
 		<groupAccountMapper
-			name='cmsfrontier'
-			description=''
-			accountName='cmsfrontier'/>
-
-		<groupAccountMapper
 			name='cmsphedex'
 			description=''
 			accountName='cmsphedex'/>
 
 		<groupAccountMapper
-			name='cmsprod'
+			name='cmsproduction'
 			description=''
 			accountName='cmsprod'/>
 
 		<groupAccountMapper
-			name='cmssoft'
+			name='uscmspilot'
 			description=''
-			accountName='cmssoft'/>
+			accountName='uscmslocal'/>
 
 		<groupAccountMapper
-			name='cmst2admin'
+			name='cmspilot'
 			description=''
-			accountName='cmst2admin'/>
+			accountName='cmspilot'/>
+
+		<groupAccountMapper
+			name='cmslocal'
+			description=''
+			accountName='cmslocal'/>
+
+		<groupAccountMapper
+			name='cmslcgadmin'
+			description=''
+			accountName='lcgadmin'/>
 
 		<groupAccountMapper
 			name='des'
@@ -1280,12 +1246,12 @@
 			accountName='usatlas4'/>
 
 		<accountPoolMapper
-			name='uscmsPool'
+			name='cmspool'
 			description=''
 			persistenceFactory='mysql'
 			recyclable='false'
 			expiration='60'
-			accountPool='uscmsPool'/>
+			accountPool='cmspool'/>
 
 		<groupAccountMapper
 			name='vo.cta.in2p3.fr'
@@ -1358,11 +1324,11 @@
 			accountMappers='cigi'/>
 
 		<groupToAccountMapping
-			name='cmsphedex2'
+			name='cmsphedex'
 			description=''
 			accountingVoSubgroup='cms'
 			accountingVo='CMS'
-			userGroups='cmsphedex2'
+			userGroups='cmsphedex'
 			accountMappers='cmsphedex'/>
 
 		<groupToAccountMapping
@@ -1374,28 +1340,44 @@
 			accountMappers='cmsprod'/>
 
 		<groupToAccountMapping
-			name='cmssoft'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='cmssoft2'
-			accountMappers='cmssoft'/>
-
-		<groupToAccountMapping
 			name='cmsuser'
 			description=''
 			accountingVoSubgroup='cms'
 			accountingVo='CMS'
 			userGroups='cmsuser'
-			accountMappers='uscmsPool'/>
+			accountMappers='cmspool'/>
 
 		<groupToAccountMapping
-			name='cmsuser-null'
+			name='cmspilot'
 			description=''
 			accountingVoSubgroup='cms'
 			accountingVo='CMS'
-			userGroups='cmsuser-null'
-			accountMappers='uscmsPool'/>
+			userGroups='cmspilot'
+			accountMappers='cmspilot'/>
+
+		<groupToAccountMapping
+			name='uscmspilot'
+			description=''
+			accountingVoSubgroup='cms'
+			accountingVo='CMS'
+			userGroups='uscmspilot'
+			accountMappers='uscmspilot'/>
+
+		<groupToAccountMapping
+			name='cmslocal'
+			description=''
+			accountingVoSubgroup='cms'
+			accountingVo='CMS'
+			userGroups='cmslocal'
+			accountMappers='cmslocal'/>
+
+		<groupToAccountMapping
+			name='cmslcgadmin'
+			description=''
+			accountingVoSubgroup='cms'
+			accountingVo='CMS'
+			userGroups='cmslcgadmin'
+			accountMappers='cmslcgadmin'/>
 
 		<groupToAccountMapping
 			name='des'
@@ -1734,54 +1716,6 @@
 			accountMappers='suragrid'/>
 
 		<groupToAccountMapping
-			name='uscmsfrontier'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='cmsfrontier'
-			accountMappers='cmsfrontier'/>
-
-		<groupToAccountMapping
-			name='uscmsphedex'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='cmsphedex'
-			accountMappers='cmsphedex'/>
-
-		<groupToAccountMapping
-			name='uscmsprod'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='cmsprod'
-			accountMappers='cmsprod'/>
-
-		<groupToAccountMapping
-			name='uscmssoft'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='cmssoft'
-			accountMappers='cmssoft'/>
-
-		<groupToAccountMapping
-			name='uscmst2admin'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='uscmst2admin'
-			accountMappers='cmst2admin'/>
-
-		<groupToAccountMapping
-			name='uscmsuser'
-			description=''
-			accountingVoSubgroup='cms'
-			accountingVo='CMS'
-			userGroups='uscmsuser'
-			accountMappers='uscmsPool'/>
-
-		<groupToAccountMapping
 			name='vo.cta.in2p3.fr'
 			description=''
 			accountingVoSubgroup='vo.cta.in2p3.fr'
@@ -1802,7 +1736,7 @@
 	<hostToGroupMappings>
 
 		<hostToGroupMapping
-			groupToAccountMappings='cdf-fnal, fermilab, mis, star, uscmsuser, cmsuser, uscmst2admin, uscmssoft, cmssoft, uscmsprod, uscmsphedex, cmsphedex2, uscmsfrontier, cmsuser-null, cmsproduction, dzerouser, dzeroana, dzeroservice, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
+			groupToAccountMappings='cdf-fnal, fermilab, mis, star, cmspilot, uscmspilot, cmslocal, cmsproduction, cmslcgadmin, dzerouser, dzeroana, dzeroservice, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
 			description=''
 			cn='*/?*.@DOMAINNAME@'/>
 
