drop /production role for des vomsUserGroup (SOFTWARE-2350)

--- a/gums.config.template
+++ b/gums.config.template
@@ -578,7 +578,7 @@
 			vomsServer='des'
 			matchFQAN='vo'
 			acceptProxyWithoutFQAN='true'
-			voGroup='/des/production'/>
+			voGroup='/des'/>
 
 		<vomsUserGroup
 			name='des-production'
