fix cmsprod groupAccountMapper name (SOFTWARE-2691)
the gums config was invalid with name='cmsproduction' here.

--- a/gums.config.template
+++ b/gums.config.template
@@ -1021,7 +1021,7 @@
 			accountName='cmsphedex'/>
 
 		<groupAccountMapper
-			name='cmsproduction'
+			name='cmsprod'
 			description=''
 			accountName='cmsprod'/>
 
