--- a/gums.config.template
+++ b/gums.config.template
@@ -474,6 +474,16 @@
 			voGroup='/cdf'/>
 
 		<vomsUserGroup
+			name='cdfana'
+			access='read self'
+			description=''
+			vomsServer='cdf2'
+			matchFQAN='exact'
+			acceptProxyWithoutFQAN='false'
+			voGroup='/cdf'
+			role='Analysis'/>
+
+		<vomsUserGroup
 			name='cigi'
 			access='read self'
 			description=''
@@ -993,6 +1003,11 @@
 			accountName='cdf'/>
 
 		<groupAccountMapper
+			name='cdfana'
+			description=''
+			accountName='cdfana'/>
+
+		<groupAccountMapper
 			name='cigi'
 			description=''
 			accountName='cigi'/>
@@ -1296,6 +1311,14 @@
 			accountingVo='CDF'
 			userGroups='cdf-fnal'
 			accountMappers='cdf'/>
+
+		<groupToAccountMapping
+			name='cdfana'
+			description=''
+			accountingVoSubgroup='cdf'
+			accountingVo='CDF'
+			userGroups='cdfana'
+			accountMappers='cdfana'/>
 
 		<groupToAccountMapping
 			name='cigi'
@@ -1702,7 +1725,7 @@
 	<hostToGroupMappings>
 
 		<hostToGroupMapping
-			groupToAccountMappings='cdf-fnal, fermilab, mis, star, cmspilot, uscmspilot, cmslocal, cmsproduction, cmslcgadmin, dzeroana, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
+			groupToAccountMappings='cdf-fnal, cdfana, fermilab, mis, star, cmspilot, uscmspilot, cmslocal, cmsproduction, cmslcgadmin, dzeroana, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
 			description=''
 			cn='*/?*.@DOMAINNAME@'/>
 
