des update for SOFTWARE-2690

--- a/gums.config.template
+++ b/gums.config.template
@@ -557,9 +557,10 @@
 			access='read self'
 			description=''
 			vomsServer='des'
-			matchFQAN='vo'
+			matchFQAN='exact'
 			acceptProxyWithoutFQAN='true'
-			voGroup='/des'/>
+			voGroup='/des'
+			role='Analysis'/>
 
 		<vomsUserGroup
 			name='des-production'
