--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -22,7 +22,8 @@ group vomss://voms2.cern.ch:8443/voms/cms uscms01
 group vomss://voms.opensciencegrid.org:8443/voms/osg?/osg/ligo ligo
 #-------------------
 # USER-VO-MAP cdf CDF -- 1 -- Dennis Box (dbox@fnal.gov)     
-group vomss://voms.fnal.gov:8443/voms/cdf cdf
+group vomss://voms1.fnal.gov:8443/voms/cdf cdf
+group vomss://voms2.fnal.gov:8443/voms/cdf cdf
 #-------------------
 # USER-VO-MAP dzero DZERO -- 13 -- Fermilab Service Desk (servicedesk@fnal.gov)  
 group vomss://voms.fnal.gov:8443/voms/dzero?/dzero/users samgrid
