--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -56,8 +56,8 @@ group vomss://grid-voms.desy.de:8443/voms/ilc ilc
 # USER-VO-MAP sbgrid SBGrid -- 33 -- Ian Levesque (ian@crystal.harvard.edu)
 group vomss://hpc.sbgrid.org:8443/voms/SBGrid sbgrid
 #-------------------
-# USER-VO-MAP cigi CIGI -- 34 -- Shaowen Wang (shaowen@uiuc.edu)
-group vomss://voms.cigi.uiuc.edu:8443/voms/cigi cigi
+# USER-VO-MAP cigi CIGI -- 34 -- Anand Padmanabhan (apadmana@uiuc.edu)
+group vomss://vm246.roger.ncsa.illinois.edu:8443/voms/CIGI CIGI
 #-------------------
 # USER-VO-MAP icecube IceCube -- 35 -- Steve Barnet (barnet@icecube.wisc.edu)
 group vomss://grid-voms.desy.de:8443/voms/icecube icecube
