--- a/gums.config.template
+++ b/gums.config.template
@@ -856,7 +856,7 @@
 			description=''
 			vomsServer='atlas'
 			matchFQAN='vo'
-			acceptProxyWithoutFQAN='true'
+			acceptProxyWithoutFQAN='false'
 			voGroup='/atlas'/>
 
 		<vomsUserGroup
@@ -864,8 +864,8 @@
 			access='read self'
 			description=''
 			vomsServer='atlas'
-			matchFQAN='vo'
-			acceptProxyWithoutFQAN='true'
+			matchFQAN='vogroup'
+			acceptProxyWithoutFQAN='false'
 			voGroup='/atlas/usatlas'/>
 
 		<vomsUserGroup
